feat(typeorm): Implemented update member
