# server/src/resources/members/MemberMapper.ts
@@ -12,17 +12,20 @@ import {
   MenteeDto,
   MentorDto,
   MembersFieldDto,
+  LanguageDto,
+  ItSkillDto,
 } from "../../typeOrm/types/memberTypes";
 import { PermissionDTO, User } from "../../typeOrm/types/authTypes";
 import { JWTPayload } from "../../typeOrm/types/authTypes";
 import { MemberHasDirectorPosition } from "../../typeOrm/entities/MemberHasDirectorPosition";
+import { Language } from "../../typeOrm/entities/Language";
+import { ItSkill } from "../../typeOrm/entities/ItSkill";
 
 /**
- * Provides methods to map a member to a dto (data transfer object)
+ * Provides methods to map a member to a dto (data transfer object) or vice versa
  */
 export class MemberMapper {
-  // --- To DTO mapper functions
-
+  // --- From Entity to DTO mapper functions
   static memberToJWTPayload(member: Member, directorPermissions: PermissionDTO[]): JWTPayload {
     return {
       memberId: member.memberId,
@@ -135,7 +138,7 @@ export class MemberMapper {
         mobile: member.mobile,
         jbtEmail: member.jbtEmail,
         memberStatus: member.memberStatus,
-        generation: member.generation?.generationId,
+        generation: member.generationId ? member.generationId : null,
         internalProject: member.internalProjects ? member.internalProjects[0] : null,
         traineeSince: member.traineeSince,
         memberSince: member.memberSince,
@@ -183,7 +186,7 @@ export class MemberMapper {
         mobile: member.mobile,
         jbtEmail: member.jbtEmail,
         memberStatus: member.memberStatus,
-        generation: member.generation?.generationId,
+        generation: member.generationId ? member.generationId : null,
         internalProject: member.internalProjects ? member.internalProjects[0] : null,
         traineeSince: member.traineeSince,
         memberSince: member.memberSince,
@@ -236,5 +239,68 @@ export class MemberMapper {
     };
   }
 
-  // --- From DTO mapper functions
+  // --- From DTO to Entity mapper functions
+
+  static personalMemberDetailsDtoToMember(
+    memberID: number,
+    member: Member,
+    memberDetailsDto: MemberDetailsDto
+  ): Member {
+    member.mobile = memberDetailsDto.mobile;
+    member.employer = memberDetailsDto.employer;
+    member.street1 = memberDetailsDto.street1;
+    member.postalCode1 = memberDetailsDto.postalCode1;
+    member.city1 = memberDetailsDto.city1;
+    member.phone1 = memberDetailsDto.phone1;
+    member.email1 = memberDetailsDto.email1;
+    member.street2 = memberDetailsDto.street2;
+    member.postalCode2 = memberDetailsDto.postalCode2;
+    member.city2 = memberDetailsDto.city2;
+    member.phone2 = memberDetailsDto.phone2;
+    member.email2 = memberDetailsDto.email2;
+    member.university = memberDetailsDto.university;
+    member.courseOfStudy = memberDetailsDto.courseOfStudy;
+    member.studyStart = memberDetailsDto.studyStart;
+    member.studyEnd = memberDetailsDto.studyEnd;
+    member.specializations = memberDetailsDto.specializations;
+    member.apprenticeship = memberDetailsDto.apprenticeship;
+    member.accountHolder = memberDetailsDto.accountHolder;
+    member.iban = memberDetailsDto.iban;
+    member.bic = memberDetailsDto.bic;
+    member.drivingLicense = memberDetailsDto.drivingLicense;
+    member.firstAidTraining = memberDetailsDto.firstAidTraining;
+    member.languages =
+      memberDetailsDto.languages === undefined
+        ? []
+        : MemberMapper.languageDtosToLanguages(memberID, memberDetailsDto.languages);
+    member.itSkills =
+      memberDetailsDto.itSkills === undefined
+        ? []
+        : MemberMapper.itSkillDtosToItSkills(memberID, memberDetailsDto.itSkills);
+    return member;
+  }
+
+  static languageDtoToLanguage(memberId: number, languageDto: LanguageDto): Language {
+    // TODO: Add type
+    const language = new Language();
+    language.memberId = memberId;
+    language.value = languageDto.value;
+    language.level = languageDto.level;
+    return language;
+  }
+  static languageDtosToLanguages(memberId: number, languageDtos: LanguageDto[]): Language[] {
+    return languageDtos.map((languageDto) => this.languageDtoToLanguage(memberId, languageDto));
+  }
+
+  static itSkillDtoToItSkill(memberId: number, itSkillDto: ItSkillDto): ItSkill {
+    // TODO: Add type
+    const itSkill = new ItSkill();
+    itSkill.memberId = memberId;
+    itSkill.value = itSkillDto.value;
+    itSkill.level = itSkillDto.level;
+    return itSkill;
+  }
+  static itSkillDtosToItSkills(memberId: number, itSkillDtos: ItSkillDto[]): ItSkill[] {
+    return itSkillDtos.map((itSkillDto) => this.itSkillDtoToItSkill(memberId, itSkillDto));
+  }
 }
