# server/src/typeOrm/types/memberTypes.ts
@@ -1,6 +1,4 @@
 import { InternalProject } from "../../typeOrm/entities/InternalProject";
-import { ItSkill } from "../entities/ItSkill";
-import { Language } from "../../typeOrm/entities/Language";
 import { MemberStatus } from "../../typeOrm/entities/MemberStatus";
 
 /**
@@ -135,6 +133,32 @@ export type DirectorDto = {
 };
 
 /**
+ * Type of the language dto
+ */
+export type LanguageDto = {
+  memberId: number;
+  value: string;
+  level: number;
+};
+
+/**
+ * Type of the it skill dto
+ */
+export type ItSkillDto = {
+  memberId: number;
+  value: string;
+  level: number;
+};
+
+/**
+ * Type of the member status dto
+ */
+export type MemberStatusDto = {
+  memberStatusId: number;
+  name: string;
+};
+
+/**
  * Type of the member details dto used for the member details page
  */
 export type MemberDetailsDto = {
@@ -145,7 +169,7 @@ export type MemberDetailsDto = {
   birthday: Date | null;
   mobile: string;
   jbtEmail: string;
-  memberStatus: MemberStatus;
+  memberStatus: MemberStatusDto;
   generation: number | null;
   internalProject: InternalProject | null;
   traineeSince: Date | null;
@@ -176,7 +200,7 @@ export type MemberDetailsDto = {
   commitment: string | null;
   canPL: Date | null;
   canQM: Date | null;
-  lastChange: Date;
+  lastChange: Date | null;
   drivingLicense: number;
   firstAidTraining: boolean;
   // Optional attributes only viewable with specific permissions (of if the user is the member)
@@ -184,8 +208,8 @@ export type MemberDetailsDto = {
   iban?: string;
   bic?: string;
   // Additional attributes
-  languages?: Language[];
-  itSkills?: ItSkill[];
+  languages?: LanguageDto[];
+  itSkills?: ItSkillDto[];
   mentees?: MenteeDto[];
   mentor?: MentorDto | null;
 };
